--- a/styles/app.css
+++ b/styles/app.css
@@ -361,3 +361,33 @@ input[type="search" i]::-webkit-search-cancel-button {
 .header-white {
  background-color: #fff;
 }
+
+.dzBackgroundText {
+ &.dz-drag-hover {
+  &:after {
+   top: 50%;
+   opacity: 1;
+  }
+ }
+
+ &:after {
+  transition: 0.3s ease;
+  /* background-color: #4373f0; */
+  content: "Drop Image Here";
+  opacity: 0;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+  font-size: 2rem;
+  font-weight: bold;
+  zindex: 1;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
+}
