--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2416,6 +2416,9 @@ video {
 .h-\[60px\] {
   height: 60px;
 }
+.h-6 {
+  height: 1.5rem;
+}
 .h-\[130px\] {
   height: 130px;
 }
@@ -2454,9 +2457,6 @@ video {
 }
 .h-\[94px\] {
   height: 94px;
-}
-.h-6 {
-  height: 1.5rem;
 }
 .max-h-60 {
   max-height: 15rem;
@@ -4145,6 +4145,9 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(243 236 230 / var(--tw-bg-opacity));
 }
+.bg-transparent {
+  background-color: transparent;
+}
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
@@ -4185,9 +4188,6 @@ video {
 .bg-grey-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(157 163 175 / var(--tw-bg-opacity));
-}
-.bg-transparent {
-  background-color: transparent;
 }
 .bg-indigo-500 {
   --tw-bg-opacity: 1;
@@ -4241,9 +4241,9 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
-.\!bg-red-800 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(153 27 27 / var(--tw-bg-opacity)) !important;
+.bg-\[\#F7F5F4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 245 244 / var(--tw-bg-opacity));
 }
 .bg-\[\#deebff\] {
   --tw-bg-opacity: 1;
@@ -4604,6 +4604,9 @@ video {
 .pb-20 {
   padding-bottom: 5rem;
 }
+.pt-1 {
+  padding-top: 0.25rem;
+}
 .pt-\[80px\] {
   padding-top: 80px;
 }
@@ -4640,11 +4643,11 @@ video {
 .pr-11 {
   padding-right: 2.75rem;
 }
+.pt-3 {
+  padding-top: 0.75rem;
+}
 .pt-\[40px\] {
   padding-top: 40px;
-}
-.pt-1 {
-  padding-top: 0.25rem;
 }
 .text-left {
   text-align: left;
@@ -6171,16 +6174,16 @@ video {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
-.focus\:ring-2:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 -moz-calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
 .focus\:ring-0:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 -moz-calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.focus\:ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 -moz-calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 .focus\:ring-primary-300:focus {
@@ -11508,3 +11511,20 @@ input[type="search" i]::-webkit-search-cancel-button {
       -ms-flex-pack: center;
           justify-content: center;
  }
+.dz-dashed-outline {
+ background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='16' ry='16' stroke='%23E4E5E2' stroke-width='5' stroke-dasharray='6%2c12' stroke-dashoffset='14' stroke-linecap='square'/%3e%3c/svg%3e");
+ border-radius: 16px;
+}
+@keyframes fadeIn {
+ 0% {
+  opacity: 0;
+ }
+ 100% {
+  opacity: 1;
+ }
+}
+.fade-in-image {
+ -webkit-animation: fadeIn 0.5s;
+    -moz-animation: fadeIn 0.5s;
+         animation: fadeIn 0.5s;
+}
