--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2416,11 +2416,8 @@ video {
 .h-\[60px\] {
   height: 60px;
 }
-.h-6 {
-  height: 1.5rem;
-}
-.h-\[130px\] {
-  height: 130px;
+.h-\[185px\] {
+  height: 185px;
 }
 .h-\[14px\] {
   height: 14px;
@@ -2460,6 +2457,9 @@ video {
 }
 .max-h-60 {
   max-height: 15rem;
+}
+.max-h-\[100px\] {
+  max-height: 100px;
 }
 .max-h-\[56px\] {
   max-height: 56px;
@@ -2729,6 +2729,9 @@ video {
 .w-\[225px\] {
   width: 225px;
 }
+.w-12 {
+  width: 3rem;
+}
 .w-\[98\.34px\] {
   width: 98.34px;
 }
@@ -2740,6 +2743,9 @@ video {
 }
 .min-w-\[130px\] {
   min-width: 130px;
+}
+.min-w-\[220px\] {
+  min-width: 220px;
 }
 .max-w-\[548px\] {
   max-width: 548px;
@@ -2900,6 +2906,9 @@ video {
 .max-w-\[700px\] {
   max-width: 700px;
 }
+.max-w-\[220px\] {
+  max-width: 220px;
+}
 .max-w-\[191px\] {
   max-width: 191px;
 }
@@ -2969,6 +2978,9 @@ video {
 .max-w-\[120px\] {
   max-width: 120px;
 }
+.max-w-\[168px\] {
+  max-width: 168px;
+}
 .max-w-\[43px\] {
   max-width: 43px;
 }
@@ -2980,9 +2992,6 @@ video {
 }
 .max-w-\[78px\] {
   max-width: 78px;
-}
-.max-w-\[220px\] {
-  max-width: 220px;
 }
 .flex-1 {
   -webkit-box-flex: 1;
@@ -3824,6 +3833,9 @@ video {
      -moz-column-gap: 2rem;
           column-gap: 2rem;
 }
+.gap-y-2 {
+  row-gap: 0.5rem;
+}
 .gap-y-10 {
   row-gap: 2.5rem;
 }
@@ -4145,13 +4157,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(243 236 230 / var(--tw-bg-opacity));
 }
-.bg-transparent {
-  background-color: transparent;
-}
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
 .bg-emerald-100 {
   background-color: var(--emerald-100);
 }
@@ -4188,6 +4193,9 @@ video {
 .bg-grey-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(157 163 175 / var(--tw-bg-opacity));
+}
+.bg-transparent {
+  background-color: transparent;
 }
 .bg-indigo-500 {
   --tw-bg-opacity: 1;
@@ -4244,6 +4252,14 @@ video {
 .bg-\[\#F7F5F4\] {
   --tw-bg-opacity: 1;
   background-color: rgb(247 245 244 / var(--tw-bg-opacity));
+}
+.bg-\[\#F0EEED\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 238 237 / var(--tw-bg-opacity));
+}
+.bg-\[\#4373F0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(67 115 240 / var(--tw-bg-opacity));
 }
 .bg-\[\#deebff\] {
   --tw-bg-opacity: 1;
@@ -4603,9 +4619,6 @@ video {
 }
 .pb-20 {
   padding-bottom: 5rem;
-}
-.pt-1 {
-  padding-top: 0.25rem;
 }
 .pt-\[80px\] {
   padding-top: 80px;
@@ -5094,6 +5107,10 @@ video {
 .\!text-primary-600 {
   color: var(--primary-plum-600) !important;
 }
+.text-\[\#353331\] {
+  --tw-text-opacity: 1;
+  color: rgb(53 51 49 / var(--tw-text-opacity));
+}
 .text-success-800 {
   --tw-text-opacity: 1;
   color: rgb(39 57 57 / var(--tw-text-opacity));
@@ -5535,13 +5552,13 @@ video {
   position: absolute;
 }
 .dzBackgroundHeight {
-  height: -moz-calc(100vh - (var(--nav-top-sm) + 130px));
-  height: calc(100vh - (var(--nav-top-sm) + 130px));
+  height: -moz-calc(100vh - (var(--nav-top-sm) + 185px));
+  height: calc(100vh - (var(--nav-top-sm) + 185px));
 }
 @media (min-width: 1024px) {
   .dzBackgroundHeight {
-    height: -moz-calc(100vh - (var(--nav-top-lg) + 130px));
-    height: calc(100vh - (var(--nav-top-lg) + 130px));
+    height: -moz-calc(100vh - (var(--nav-top-lg) + 185px));
+    height: calc(100vh - (var(--nav-top-lg) + 185px));
   }
 }
 .rest-link {
@@ -6174,16 +6191,16 @@ video {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
-.focus\:ring-0:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 -moz-calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
 .focus\:ring-2:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 -moz-calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.focus\:ring-0:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 -moz-calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 .focus\:ring-primary-300:focus {
@@ -11527,4 +11544,40 @@ input[type="search" i]::-webkit-search-cancel-button {
  -webkit-animation: fadeIn 0.5s;
     -moz-animation: fadeIn 0.5s;
          animation: fadeIn 0.5s;
+}
+/***** Track Styles *****/
+.dz-range {
+ /* background: #0275ff; */
+}
+/***** Chrome, Safari, Opera, and Edge Chromium *****/
+.dz-range[type="range"]::-webkit-slider-runnable-track {
+ background: #c4c4c4;
+ height: 8px;
+ border-radius: 0.25rem;
+}
+/******** Firefox ********/
+.dz-range[type="range"]::-moz-range-track {
+ background: #c4c4c4;
+ height: 8px;
+ border-radius: 0.25rem;
+}
+.dz-range[type="range"]::-webkit-slider-thumb {
+ appearance: none;
+ margin-top: -6px;
+ background-color: #0275ff;
+ height: 1.25rem;
+ width: 1.25rem;
+ border-radius: 50%;
+ -webkit-appearance: none;
+ cursor: pointer;
+ box-shadow: -200px -8px 0 190px #008489;
+}
+/***** Thumb Styles *****/
+/***** Firefox *****/
+.dz-range[type="range"]::-moz-range-thumb {
+ border: none; /*Removes extra border that FF applies*/
+ border-radius: 50%; /*Removes default border-radius that FF applies*/
+ background-color: #0275ff;
+ height: 1.25rem;
+ width: 1.25rem;
 }
